--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ structopt = "0.2.10"
 rusoto_core = "0.32.0"
 rusoto_ecr = "0.32.0"
 rusoto_ecs = "0.32.0"
+rusoto_elbv2 = "0.32.0"
 failure = "0.1.1"
 tokio-core = "0.1"
 backoff = "0.1.2"
