--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ failure = "0.1.1"
 tokio-core = "0.1"
 backoff = "0.1.2"
 log = "0.4"
-loggerv = "0.7.1"
+stderrlog = "0.4"
 maplit = "1.0.1"
 itertools = "0.7.8"
