--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Jonathan Morley <jmorley@cvent.com>"]
 
 [dependencies]
+glob = "0.2.11"
 structopt = "0.2.10"
 rusoto_core = "0.32.0"
 rusoto_ecr = "0.32.0"
@@ -16,3 +17,7 @@ log = "0.4"
 stderrlog = "0.4"
 maplit = "1.0.1"
 itertools = "0.7.8"
+serde = "1"
+serde_derive = "1"
+serde_json = "1"
+clap = "2"
