--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: install-cross
     steps:
+      - run: sudo apt-get update && sudo apt-get install -y libssl-dev pkg-config
+        shell: bash
       - uses: actions/checkout@v2
         with:
           depth: 50
