--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: install-cross
     steps:
-      - run: sudo apt-get update && sudo apt-get install -y libssl-dev pkg-config
+      - run: sudo apt-get update && sudo apt-get install -y openssl libssl-dev pkg-config
         shell: bash
       - uses: actions/checkout@v2
         with:
