--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ itertools = "0.7.8"
 serde = "1"
 serde_json = "1"
 clap = "2"
+
+[target.'cfg(not(windows))'.dependencies]
+openssl = { version = '0.10', features = ["vendored"] }
